更新图片还有javabean

--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -14,4 +14,64 @@
     <servlet-name>IndexServlet</servlet-name>
     <url-pattern>/IndexServlet</url-pattern>
   </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>FiltrateServlet</display-name>
+    <servlet-name>FiltrateServlet</servlet-name>
+    <servlet-class>com.ruilin.web.list.FiltrateServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>FiltrateServlet</servlet-name>
+    <url-pattern>/filtrate</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>ParisServlet</display-name>
+    <servlet-name>ParisServlet</servlet-name>
+    <servlet-class>com.ruilin.web.list.ParisServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>ParisServlet</servlet-name>
+    <url-pattern>/paris</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>ForeverServlet</display-name>
+    <servlet-name>ForeverServlet</servlet-name>
+    <servlet-class>com.ruilin.web.list.ForeverServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>ForeverServlet</servlet-name>
+    <url-pattern>/forever</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>JustServlet</display-name>
+    <servlet-name>JustServlet</servlet-name>
+    <servlet-class>com.ruilin.web.list.JustServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>JustServlet</servlet-name>
+    <url-pattern>/just</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>MyheartServlet</display-name>
+    <servlet-name>MyheartServlet</servlet-name>
+    <servlet-class>com.ruilin.web.list.MyheartServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>MyheartServlet</servlet-name>
+    <url-pattern>/myheart</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>TrueServlet</display-name>
+    <servlet-name>TrueServlet</servlet-name>
+    <servlet-class>com.ruilin.web.list.TrueServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>TrueServlet</servlet-name>
+    <url-pattern>/true</url-pattern>
+  </servlet-mapping>
 </web-app>
