手机和邮箱验证码实现

--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -74,4 +74,84 @@
     <servlet-name>TrueServlet</servlet-name>
     <url-pattern>/true</url-pattern>
   </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>SmallServlet</display-name>
+    <servlet-name>SmallServlet</servlet-name>
+    <servlet-class>com.ruilin.web.list.SmallServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>SmallServlet</servlet-name>
+    <url-pattern>/SmallServlet</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>AnyServlet</display-name>
+    <servlet-name>AnyServlet</servlet-name>
+    <servlet-class>com.ruilin.web.list.AnyServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>AnyServlet</servlet-name>
+    <url-pattern>/any</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>MoneyServlet</display-name>
+    <servlet-name>MoneyServlet</servlet-name>
+    <servlet-class>com.ruilin.web.list.MoneyServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>MoneyServlet</servlet-name>
+    <url-pattern>/money</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>NameServlet</display-name>
+    <servlet-name>NameServlet</servlet-name>
+    <servlet-class>com.ruilin.web.list.NameServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>NameServlet</servlet-name>
+    <url-pattern>/getname</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>MohuServlet</display-name>
+    <servlet-name>MohuServlet</servlet-name>
+    <servlet-class>com.ruilin.web.list.MohuServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>MohuServlet</servlet-name>
+    <url-pattern>/mohu</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>SaleServlet</display-name>
+    <servlet-name>SaleServlet</servlet-name>
+    <servlet-class>com.ruilin.web.list.SaleServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>SaleServlet</servlet-name>
+    <url-pattern>/sale</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>TextureServlet</display-name>
+    <servlet-name>TextureServlet</servlet-name>
+    <servlet-class>com.ruilin.web.index.TextureServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>TextureServlet</servlet-name>
+    <url-pattern>/texture</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>SizeServlet</display-name>
+    <servlet-name>SizeServlet</servlet-name>
+    <servlet-class>com.ruilin.web.index.SizeServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>SizeServlet</servlet-name>
+    <url-pattern>/size</url-pattern>
+  </servlet-mapping>
 </web-app>
